force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__Action__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Action__c</fullName>
        <description>Action that this custom action performs.</description>
        <inlineHelpText>Action that this custom action performs.</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__Location__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add Products</fullName>
                </value>
                <value>
                    <fullName>Add Favorites</fullName>
                </value>
                <value>
                    <fullName>Upgrade Assets</fullName>
                </value>
                <value>
                    <fullName>Renew Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Save</fullName>
                </value>
                <value>
                    <fullName>Quick Save</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Calculate</fullName>
                </value>
                <value>
                    <fullName>Delete Lines</fullName>
                </value>
                <value>
                    <fullName>Add Group</fullName>
                </value>
                <value>
                    <fullName>Ungroup</fullName>
                </value>
                <value>
                    <fullName>Add Solution Group</fullName>
                </value>
                <value>
                    <fullName>Reset Discounts</fullName>
                </value>
                <value>
                    <fullName>Optional: All</fullName>
                </value>
                <value>
                    <fullName>Optional: None</fullName>
                </value>
                <value>
                    <fullName>Clone Group</fullName>
                </value>
                <value>
                    <fullName>Delete Group</fullName>
                </value>
                <value>
                    <fullName>Add To Favorites</fullName>
                </value>
                <value>
                    <fullName>Remove From Favorites</fullName>
                </value>
                <value>
                    <fullName>Delete Line</fullName>
                </value>
                <value>
                    <fullName>Clone Line</fullName>
                </value>
                <value>
                    <fullName>Reconfigure Line</fullName>
                </value>
                <value>
                    <fullName>Desegment Line</fullName>
                </value>
                <value>
                    <fullName>Resegment Line</fullName>
                </value>
                <value>
                    <fullName>View Discount Schedule</fullName>
                </value>
                <value>
                    <fullName>Launch External</fullName>
                </value>
                <value>
                    <fullName>Clone with Related</fullName>
                </value>
                <value>
                    <fullName>Create Order</fullName>
                </value>
                <value>
                    <fullName>Edit Lines</fullName>
                </value>
                <value>
                    <fullName>Generate Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>