force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__Active__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether this action is used.</description>
        <inlineHelpText>Select the checkbox to make this action available for use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>