force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__BrandButton__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BrandButton__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this Custom Action is a Brand Button. Affects styling of un-nested Actions only.</description>
        <inlineHelpText>Indicates this Custom Action is a Brand Button. Affects styling of un-nested Actions only.</inlineHelpText>
        <label>Brand Button</label>
        <type>Checkbox</type>
    </CustomField>