force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__Class__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Class__c</fullName>
        <description>Css class of the custom action for easy identification on HTML.</description>
        <inlineHelpText>Css class of the custom action for easy identification on HTML.</inlineHelpText>
        <label>Class</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>