force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__Default__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets action to be the default overriding action.</description>
        <inlineHelpText>Select checkbox to set action as the default overriding action.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </CustomField>