force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__Description__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description of the Custom Action which will appear when users hover over the button.</description>
        <inlineHelpText>Enter the value for what you want to appear when a user hovers over the Custom Action button.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </CustomField>