force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__DisplayOrder__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <description>The order in which this action display in the UI.</description>
        <inlineHelpText>The order in which this action display in the UI.</inlineHelpText>
        <label>Display Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>