force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__EventHandlerName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__EventHandlerName__c</fullName>
        <description>Method name for the click handler of this custom action.</description>
        <inlineHelpText>Method name for the click handler of this custom action.</inlineHelpText>
        <label>Event Handler Name</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>