force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__IconClass__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IconClass__c</fullName>
        <description>CSS class name for the icon of this custom action.</description>
        <inlineHelpText>CSS class name for the icon of this custom action.</inlineHelpText>
        <label>Icon Class</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>