force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__Location__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Location__c</fullName>
        <description>Location of this action on the page.</description>
        <inlineHelpText>Location of this action on the page.</inlineHelpText>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__Page__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Quote/Group</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Line</fullName>
                </value>
                <value>
                    <fullName>Configurator</fullName>
                </value>
                <value>
                    <fullName>Quote Panel</fullName>
                </value>
                <value>
                    <fullName>Account Panel</fullName>
                </value>
                <value>
                    <fullName>Contract Panel</fullName>
                </value>
                <value>
                    <fullName>Opportunity Panel</fullName>
                </value>
                <value>
                    <fullName>Order Panel</fullName>
                </value>
                <value>
                    <fullName>Quote Document Panel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>