force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__Page__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Page__c</fullName>
        <description>The page of which to add the custom action.</description>
        <inlineHelpText>The page of which to add the custom action.</inlineHelpText>
        <label>Page</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Configurator</fullName>
                </value>
                <value>
                    <fullName>Quote Line Editor</fullName>
                    <default>true</default>
                    <label>Quote Line Editor</label>
                </value>
                <value>
                    <fullName>Quote Detail</fullName>
                </value>
                <value>
                    <fullName>Account Detail</fullName>
                </value>
                <value>
                    <fullName>Contract Detail</fullName>
                </value>
                <value>
                    <fullName>Opportunity Detail</fullName>
                </value>
                <value>
                    <fullName>Order Detail</fullName>
                </value>
                <value>
                    <fullName>Quote Document Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>