force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__PageHandlerName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PageHandlerName__c</fullName>
        <description>Page name for this custom action.</description>
        <inlineHelpText>Page name for this custom action.</inlineHelpText>
        <label>Page Handler Name</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>