force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__ParentCustomAction__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ParentCustomAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the parent custom action that this action is grouped under.</description>
        <inlineHelpText>Reference to the parent custom action that this action is grouped under.</inlineHelpText>
        <label>Parent Custom Action</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__CustomAction__c.SBQQ__Type__c</field>
                <operation>equals</operation>
                <value>Menu</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__CustomAction__c</referenceTo>
        <relationshipLabel>Custom Actions</relationshipLabel>
        <relationshipName>Custom_Actions</relationshipName>
        <type>Lookup</type>
    </CustomField>