force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__ReturnURL__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ReturnURL__c</fullName>
        <description>URL to return to after successful execution. Not applicable to all actions.</description>
        <inlineHelpText>URL to return to after successful execution. Not applicable to all actions.</inlineHelpText>
        <label>Return URL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </CustomField>