force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Type__c</fullName>
        <description>UI element that this custom action is rendered as.</description>
        <inlineHelpText>UI element that this custom action is rendered as.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Button</fullName>
                </value>
                <value>
                    <fullName>Menu</fullName>
                </value>
                <value>
                    <fullName>Separator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>