force-app/main/default/objects/SBQQ__CustomAction__c/fields/SBQQ__URLTarget__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__URLTarget__c</fullName>
        <description>Method of navigating to the URL.</description>
        <inlineHelpText>Method of navigating to the URL.</inlineHelpText>
        <label>URL Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Popup</fullName>
                </value>
                <value>
                    <fullName>Replace Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>