force-app/main/default/objects/SBQQ__CustomAction__c/validationRules/SBQQ__Non_empty_URL_for_Save_and_Navigate.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Non_empty_URL_for_Save_and_Navigate</fullName>
        <active>true</active>
        <description>Non-empty URL for Save and Navigate Custom Action.</description>
        <errorConditionFormula>AND (ISPICKVAL(SBQQ__Action__c, &quot;Save and Navigate&quot;), ISBLANK( SBQQ__URL__c ))</errorConditionFormula>
        <errorDisplayField>SBQQ__URL__c</errorDisplayField>
        <errorMessage>URL can&apos;t be empty for Custom Action &quot;Save and Navigate&quot;</errorMessage>
    </ValidationRule>