force-app/main/default/objects/SBQQ__CustomAction__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <columns>SBQQ__Active__c</columns>
        <columns>SBQQ__DisplayOrder__c</columns>
        <columns>NAME</columns>
        <columns>SBQQ__Type__c</columns>
        <columns>SBQQ__Label__c</columns>
        <columns>SBQQ__ParentCustomAction__c</columns>
        <columns>SBQQ__Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>